--- a/Furnicome/public/vista_produc.html
+++ b/Furnicome/public/vista_produc.html
@@ -128,7 +128,7 @@
                             <hr>
                             <p class="card-text">Sofá cama perfecto para pasar el rato viendo peliculas o disfrutando de
                                 una siesta.</p>
-                            <p class="card-text">Medidas: 130cm de largo x 90cm de ancho x 69 de alto comprelo</p>
+                            <p class="card-text">Medidas: 130cm de largo x 90cm de ancho x 69 de alto</p>
                             <p class="card-text"><small class="text-muted">Garantia: 1 año por desperfectos de
                                     fabrica</small></p>
                             <p class="card-text"><small class="text-muted">En existencia</small></p>
