--- a/Furnicome/public/products.html
+++ b/Furnicome/public/products.html
@@ -116,110 +116,131 @@
 
     <section>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top" alt="Skyscrapers" />
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.
-                        </p>
+        <div class="filtros">
+
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
+            </div>
+        </div>
+
+        <div>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
+                            alt="Los Angeles Skyscrapers" />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-dark btn-rounded">Parangutucuaricuaro</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
+                            alt="Palm Springs Road" />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show
+                                that equal height action.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
-                        alt="Los Angeles Skyscrapers" />
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <button type="button" class="btn btn-dark btn-rounded">Parangutucuaricuaro</button>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
-                        alt="Palm Springs Road" />
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show
-                            that equal height action.
-                        </p>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
+                            alt="Los Angeles Skyscrapers" />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
+                            alt="Palm Springs Road" />
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">
+                                This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show
+                                that equal height action.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top" alt="Skyscrapers" />
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
-                        alt="Los Angeles Skyscrapers" />
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
-                        alt="Palm Springs Road" />
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show
-                            that equal height action.
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </section>
 
 
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start  text-muted"  id="c1">
+    <footer class="text-center text-lg-start  text-muted" id="c1">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
