pagina de sign in
sign in y su css

--- a/Furnicome/private/login.html
+++ b/Furnicome/private/login.html
@@ -15,10 +15,10 @@
 <body class="D1">
     <form action="">
         <div>
-            <h1 class="title">Furnicom</h1>
+            <h1 class="title">Furnicom Login</h1>
         </div>
         
-        <label for="">
+        <label for="" id="labelfont">
             <img src="../recursos/user.png" width="15" height="15" alt="">
             <input placeholder="Usuario" type="text" id="username">
         </label>
@@ -29,6 +29,7 @@
         <button id="button">Iniciar sesión</button>
 
         <a href="#" class="link">¿Olvidaste tu contraseña?</a>
+        <a href="#" class="link">¿No tienes cuenta? Resgistrate aquí</a>
 
     </form>
     <script src="main.js"></script>
