--- a/Furnicome/public/sign_up.html
+++ b/Furnicome/public/sign_up.html
@@ -44,7 +44,7 @@
                         <div class="input-box">
                             <span class="details"></span>
                             <img src="../recursos/user.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="apellido" required>
+                            <input type="text" placeholder="Apellido" required>
                         </div>
                     </label>
                     <label for="">
@@ -72,15 +72,14 @@
                     </label>
                     <label for="" class="label2">
                         <div class="input-box">
-                            <span class="details"></span>
+
                             <img src="../recursos/direccion.png" alt="" width="16px" height="16px">
-                            <input class="largo" type="text" placeholder="Dirección" width="100px" required >
+                            <input class="largo" type="text" placeholder="Dirección" required>
                         </div>
                     </label>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value=""
-                            id="flexCheckDefault" />
-                        <label class="form-check-label" for="flexCheckDefault">Negro</label>
+                        <label class="form-check-label" for="flexCheckDefault">Acepto terminos y condiciones</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     </div>
                     <div class="button" id="button">
                         <button class="button" input type="submit" value="Registrar">Registrar</button>
