--- a/Furnicome/public/products.html
+++ b/Furnicome/public/products.html
@@ -163,7 +163,7 @@
                                 content.</p>
                         </div>
                         <div class="card-footer">
-                            <button type="button" class="btn btn-dark btn-rounded">Parangutucuaricuaro</button>
+                            <a href="../public/vista_produc.html"><button type="button" class="btn btn-dark btn-rounded">Parangutucuaricuaro</button></a>
                         </div>
                     </div>
                 </div>
