Revert "Registros FurniCum"
This reverts commit b7e17da023c4432c49564aff6a37b99db02c3f47.

--- a/Furnicome/public/products.html
+++ b/Furnicome/public/products.html
@@ -163,7 +163,7 @@
                                 content.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="../public/vista_produc.html"><button type="button" class="btn btn-dark btn-rounded">Parangutucuaricuaro</button></a>
+                            <button type="button" class="btn btn-dark btn-rounded">Parangutucuaricuaro</button>
                         </div>
                     </div>
                 </div>
