--- a/Furnicome/private/agregar_productos.html
+++ b/Furnicome/private/agregar_productos.html
@@ -11,7 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Agregar Products</title>
+    <title>Agregar Productos</title>
 </head>
 
 <body>
