--- a/Furnicome/public/index.html
+++ b/Furnicome/public/index.html
@@ -156,7 +156,7 @@
           <div class="card" style="width: 20rem; background-color: #FBF6F2;">
             <img src="../recursos/icono2.jpg" class="card-img-top" alt="..." id="bordeimgindex">
             <div class="card-body">
-              <a href="">
+              <a href="../public/products.html">
                 <h5 class="card-title">Sala</h5>
               </a>
             </div>
