"responsive" y el filtro de productos
el responsive esta con el filtro arriba

--- a/Furnicome/public/products.html
+++ b/Furnicome/public/products.html
@@ -123,132 +123,158 @@
 
     <section>
 
-        <div class="filtros">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-5 col-md-2 lg-2 col-xl-2" id="filtros">
+                    <h4 class="tt1">Filtros de busqueda</h4>
+                    <p class="pp">Categoria</p>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Dormitorio</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Sala</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Cocina</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Accesorios</label>
+                    </div>
 
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                <label class="form-check-label" for="flexCheckDefault">Default checkbox</label>
-            </div>
-        </div>
-
-        <div>
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top" alt="Skyscrapers" />
-                        <div class="card-body">
-                            <h5 class="card-title">Juego de mesa Jardin</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <a href="../public/Vistas Productos/vista_producto2.html"><button type="button"
-                                    class="btn btn-dark btn-rounded">Ver más</button></a>
-                        </div>
+                    <p class="pp">Subcategoria</p>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Mesas</label>
                     </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Sillas</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Sofas</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Roperos</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Alacenas</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Bancos</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Gavinetes</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Lámparas</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Cojines</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Floreros</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                        <label class="form-check-label" for="flexCheckDefault">Tapetes</label>
+                    </div>
+                    
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
-                            alt="Los Angeles Skyscrapers" />
-                        <div class="card-body">
-                            <h5 class="card-title">Sofá Cama</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
+                    <div>
+                        <div class="row row-cols-1 row-cols-md-3 g-3" id="mg">
+                            <div class="col">
+                                <div class="card h-100">
+                                    <a href="../public/Vistas Productos/vista_producto2.html"> <img
+                                            src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top"
+                                            alt="Skyscrapers" /> </a>
+                                    <div class="card-body">
+                                        <a href="../public/Vistas Productos/vista_producto2.html">
+                                            <h5 class="card-title">Juego de mesa Jardin</h5>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <a href="../public/Vistas Productos/vista_produc.html"><img
+                                        src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
+                                        alt="Los Angeles Skyscrapers" /></a>
+                                    <div class="card-body">
+                                        <a href="../public/Vistas Productos/vista_produc.html">
+                                            <h5 class="card-title">Sofá Cama</h5>
+                                        </a></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <a href="../public/Vistas Productos/vista_producto3.html"><img
+                                            src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
+                                            alt="Palm Springs Road" /></a>
+                                    <div class="card-body">
+                                        <a href="../public/Vistas Productos/vista_producto3.html">
+                                            <h5 class="card-title">Sofá para sala</h5>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-footer">
-                            <a href="../public/Vistas Productos/vista_produc.html"><button type="button"
-                                    class="btn btn-dark btn-rounded">Ver más</button></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
-                            alt="Palm Springs Road" />
-                        <div class="card-body">
-                            <h5 class="card-title">Sofá para sala</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show
-                                that equal height action.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <a href="../public/Vistas Productos/vista_producto3.html"><button type="button"
-                                    class="btn btn-dark btn-rounded">Ver más</button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top" alt="Skyscrapers" />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
-                            alt="Los Angeles Skyscrapers" />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
-                            alt="Palm Springs Road" />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show
-                                that equal height action.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top"
+                                        alt="Skyscrapers" />
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                    </div>
+                                    <div class="card-footer">
+                                        <small class="text-muted">Last updated 3 mins ago</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
+                                        alt="Los Angeles Skyscrapers" />
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                    </div>
+                                    <div class="card-footer">
+                                        <small class="text-muted">Last updated 3 mins ago</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
+                                        alt="Palm Springs Road" />
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                    </div>
+                                    <div class="card-footer">
+                                        <small class="text-muted">Last updated 3 mins ago</small>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-
     <!-- Footer -->
     <footer class="text-center text-lg-start  text-muted" id="c1">
         <!-- Section: Social media -->
