sobre nosotros "responsivo"

--- a/Furnicome/public/about_us.html
+++ b/Furnicome/public/about_us.html
@@ -121,8 +121,10 @@
             </nav>
 
             <!-- Background image -->
-            <div class="p-5  bg-image" style="background-image: url('../recursos/repisa2.jpg');height: 700px;">
-
+            <div class="p-5  bg-image" style="
+    background-image: url('../recursos/repisa2.jpg');
+    height: 700px;
+  ">
                 <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
                     <div class="d-flex justify-content-center align-items-center h-100">
                     </div>
@@ -133,24 +135,26 @@
         <br>
 
         <section>
-            <div class="container-image">
-                <h2>¡Bienvenido!</h2>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Morbi tristique senectus et netus et. Bibendum est ultricies integer quis
-                    auctor
-                    elit sed vulputate mi. Praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Eget
-                    mauris
-                    pharetra et ultrices neque ornare aenean euismod elementum.</p>
+            <div class="container">
+                <div class="row">
+                    <h2>Sobre nostros</h2>
+                    <div class="card col-sm-10 col-md-11 lg-6 col-xl-6">
+                        <div class="card-body">
+                            <h5 class="card-title">MISIÓN</h5>
+                            <p class="card-text"> Proporcionar a nuestros clientes una experiencia de compra en línea fácil, conveniente y satisfactoria, ofreciendo productos de alta calidad y diseño, a precios competitivos y con un excelente servicio al cliente. Buscamos ser reconocidos como una de las tiendas en línea de muebles de casa líderes en el mercado, enfocados en superar las expectativas de nuestros clientes y estableciendo relaciones duraderas con ellos. Nuestro compromiso es inspirar a nuestros clientes a crear espacios únicos y acogedores en sus hogares, proporcionándoles soluciones personalizadas y asesoramiento experto.</p>
+                        </div>
+                    </div>
+                    <div class="card col-sm-10 col-md-11 lg-6 col-xl-5">
+                        <div class="card-body">
+                            <h5 class="card-title">VISIÓN</h5>
+                            <p class="card-text"> Ser la mejor opción en línea para los consumidores que buscan muebles de alta calidad y diseño exclusivo, elaborados con materiales locales y sostenibles. Ser reconocidos como el referente en línea en la industria de muebles de casa, ofreciendo una experiencia de compra innovadora y personalizada.</p>
+                        </div>
+                    </div>
+                    <h2>Logo</h2>
+                    <img class="logo" src="../recursos/logo.png" alt="logo">
+                </div>
             </div>
         </section>
-
-        <br>
-        <div class="container-fluid">
-            <img src="../recursos/grafico.png" class="rounded mx-auto d-block" alt="..." width="550" height="400">
-        </div>
-
 
         <br>
         <div class="fo1">
