index, login, about us, productos y sign up linkeados

--- a/Furnicome/private/index.html
+++ b/Furnicome/private/index.html
@@ -49,7 +49,7 @@
                                 <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                <a class="nav-link" href="../public/products.html" id="navbarDropdownMenuLink" role="button"
                                     data-mdb-toggle="dropdown" aria-expanded="false">Muebles</a>
                                 <!--   
                                 <a class="text-reset me-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -73,7 +73,7 @@
                                 <a class="nav-link" href="#">Descuentos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sobre nosotros</a>
+                                <a class="nav-link" href="../public/about_us.html">Sobre nosotros</a>
                             </li>
                         </ul>
                         <!-- Left links -->
