--- a/Furnicome/private/login.html
+++ b/Furnicome/private/login.html
@@ -11,11 +11,11 @@
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
+<main>
 <body class="D1">
     <form action="">
         <div>
-            <h1 class="title">Furnicom Login</h1>
+            <h1 class="title">Private Login</h1>
         </div>
 
         <label for="" id="labelfont">
@@ -26,13 +26,14 @@
             <img src="../recursos/lock.png" width="15" height="15" alt="">
             <input placeholder="Contraseña" type="password" id="password">
         </label>
-        <button id="button">Iniciar sesión</button>
-
+        <a href="../public/index.html">
+            <button id="button">Iniciar sesión</button>
+        </a>
         <a href="#" class="link">¿Olvidaste tu contraseña?</a>
         <a href="#" class="link">¿No tienes cuenta? Resgistrate aquí</a>
 
     </form>
     <script src="main.js"></script>
 </body>
-
+</main>
 </html>
