--- a/Furnicome/public/about_us.html
+++ b/Furnicome/public/about_us.html
@@ -46,10 +46,10 @@
                         <!-- Left links -->
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="../public/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                <a class="nav-link" href="../public/products.html" id="navbarDropdownMenuLink" role="button"
                                     data-mdb-toggle="dropdown" aria-expanded="false">Muebles</a>
                                 <!--   
                                 <a class="text-reset me-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -84,7 +84,7 @@
                     <div class="d-flex align-items-center">
                         <!-- Icon -->
 
-                        <a class="text-reset me-3" href="#">
+                        <a class="text-reset me-3" href="../public/carrito_compras.html">
                             <i class="fas fa-shopping-cart"></i>
                         </a>
 
