--- a/Furnicome/public/sign_up.html
+++ b/Furnicome/public/sign_up.html
@@ -82,8 +82,9 @@
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     </div>
                     <div class="button" id="button">
-                        <button class="button" input type="submit" value="Registrar">Registrar</button>
-
+                        <a href="../public/login.html">
+                            <button class="button" input type="submit" value="Registrar">Registrar</button>
+                        </a>
                     </div>
                 </div>
             </form>
