--- a/Furnicome/public/Vistas Productos/vista_producto3.html
+++ b/Furnicome/public/Vistas Productos/vista_producto3.html
@@ -80,7 +80,7 @@
                 <div class="d-flex align-items-center">
                     <!-- Icon -->
 
-                    <a class="text-reset me-3" href="#">
+                    <a class="text-reset me-3" href="../../public/carrito_compras.html">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
 
