--- a/Furnicome/public/carrito_compras.html
+++ b/Furnicome/public/carrito_compras.html
@@ -44,7 +44,7 @@
           <!-- Left links -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="../public/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
@@ -136,7 +136,7 @@
                   <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
                     <!-- Image -->
                     <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Vertical/12a.webp"
+                      <img src="../recursos/safa-cama-barato-amazon.jpeg"
                         class="w-100" alt="Blue Jeans Jacket" />
                       <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
@@ -181,7 +181,7 @@
 
                     <!-- Price -->
                     <p class="text-start text-md-center">
-                      <strong>$17.99</strong>
+                      <strong>$399.99</strong>
                     </p>
                     <!-- Price -->
                   </div>
@@ -195,7 +195,7 @@
                   <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
                     <!-- Image -->
                     <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Vertical/13a.webp"
+                      <img src="../recursos/pexels-pixabay-279675.jpg"
                         class="w-100" />
                       <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
@@ -206,8 +206,8 @@
 
                   <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                     <!-- Data -->
-                    <p><strong>Red hoodie</strong></p>
-                    <p>Color: red</p>
+                    <p><strong>Juego de mesa Jardin</strong></p>
+                    <p>Color: blanco</p>
                     <button type="button" class="btn btn-sm me-1 mb-2" data-mdb-toggle="tooltip" title="Remove item">
                       <i class="fas fa-trash"></i>
                     </button>
@@ -222,7 +222,7 @@
                     <!-- Quantity -->
                     <p>Cantidad</p>
                     <div class="d-flex mb-4" style="max-width: 300px">
-                      <button class="btn btn-warning px-3 me-2"
+                      <button class="btn btn-primary px-3 me-2"
                         onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                         <i class="fas fa-minus"></i>
                       </button>
@@ -241,7 +241,7 @@
 
                     <!-- Price -->
                     <p class="text-start text-md-center">
-                      <strong>$17.99</strong>
+                      <strong>$170.99</strong>
                     </p>
                     <!-- Price -->
                   </div>
