--- a/Furnicome/private/index.html
+++ b/Furnicome/private/index.html
@@ -49,28 +49,13 @@
                                 <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../public/products.html" id="navbarDropdownMenuLink" role="button"
-                                    data-mdb-toggle="dropdown" aria-expanded="false">Muebles</a>
-                                <!--   
-                                <a class="text-reset me-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                                role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-                            </a>
-                            
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                                <li>
-                                    <a class="dropdown-item" href="#">Some news</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Another news</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                </li>
-                            </ul>
-                            -->
+                                <a class="nav-link" href="../private/agregar_categorias.html">Categorias</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Descuentos</a>
+                                <a class="nav-link" href="../private/agregar_subcategorias.html">Subcategorias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../private/agregar_productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../public/about_us.html">Sobre nosotros</a>
