--- a/Furnicome/private/login.html
+++ b/Furnicome/private/login.html
@@ -12,28 +12,28 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <main>
-<body class="D1">
-    <form action="">
-        <div>
-            <h1 class="title">Private Login</h1>
-        </div>
 
-        <label for="" id="labelfont">
-            <img src="../recursos/user.png" width="15" height="15" alt="">
-            <input placeholder="Usuario" type="text" id="username">
-        </label>
-        <label for="">
-            <img src="../recursos/lock.png" width="15" height="15" alt="">
-            <input placeholder="Contraseña" type="password" id="password">
-        </label>
-        <a href="../public/index.html">
-            <button id="button">Iniciar sesión</button>
-        </a>
-        <a href="#" class="link">¿Olvidaste tu contraseña?</a>
-        <a href="#" class="link">¿No tienes cuenta? Resgistrate aquí</a>
+    <body class="D1">
+        <form action="">
+            <div>
+                <h1 class="title">Private Login</h1>
+            </div>
 
-    </form>
-    <script src="main.js"></script>
-</body>
+            <label for="" id="labelfont">
+                <img src="../recursos/user.png" width="15" height="15" alt="">
+                <input placeholder="Usuario" type="text" id="username">
+            </label>
+            <label for="">
+                <img src="../recursos/lock.png" width="15" height="15" alt="">
+                <input placeholder="Contraseña" type="password" id="password">
+            </label>
+            <button> <a href="../private/index.html">Iniciar sesión</a></button>
+            <a href="#" class="link">¿Olvidaste tu contraseña?</a>
+            <a href="#" class="link">¿No tienes cuenta? Resgistrate aquí</a>
+
+        </form>
+        <script src="main.js"></script>
+    </body>
 </main>
+
 </html>
