--- a/Furnicome/public/sign_up.html
+++ b/Furnicome/public/sign_up.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/sign-up.css">
 </head>
-
+<main>
 <body id="body-register">
     <div class="container">
         <form action="">
@@ -90,5 +90,5 @@
             </form>
     </div>
 </body>
-
+</main>
 </html>
