cambios previos a la evaluacion

--- a/Furnicome/private/agregar_categorias.html
+++ b/Furnicome/private/agregar_categorias.html
@@ -45,7 +45,7 @@
                     <!-- Left links -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="../private/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../private/agregar_categorias.html">Categorias</a>
@@ -154,15 +154,6 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button onclick="Agregar()" type="button" class="btn btn-primary">Save changes</button>
-                            <script type="text/javascript">
-                                function Agregar() {
-                                    Swal.fire(
-                                        'Guardado con exito',
-                                        'Proceso completo!',
-                                        'success'
-                                    )
-                                }
-                            </script>
                         </div>
                     </div>
                 </div>
