--- a/Furnicome/private/agregar_productos.html
+++ b/Furnicome/private/agregar_productos.html
@@ -21,7 +21,7 @@
         crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+
 
 
     <header>
@@ -45,7 +45,7 @@
                     <!-- Left links -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="../private/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../private/agregar_categorias.html">Categorias</a>
@@ -186,15 +186,6 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button onclick="Agregar()" type="button" class="btn btn-primary">Save changes</button>
-                            <script type="text/javascript">
-                                function Agregar() {
-                                    Swal.fire(
-                                        'Guardado con exito',
-                                        'Proceso completo!',
-                                        'success'
-                                    )
-                                }
-                            </script>
                         </div>
                     </div>
                 </div>
@@ -296,7 +287,7 @@
 
     </section>
 
-
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <br>
 
 </body>
