--- a/Furnicome/public/products.html
+++ b/Furnicome/public/products.html
@@ -15,7 +15,7 @@
 <main>
 
     <body>
-        <link rel="stylesheet" href="C:\Users\paulr\OneDrive\Escritorio\Furnicome\css">
+        <link rel="stylesheet" href="../css/estilo.css">
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -86,12 +86,6 @@
                         <a class="text-reset me-3" href="../public/carrito_compras.html">
                             <i class="fas fa-shopping-cart"></i>
                         </a>
-
-
-                        <!-- Notifications -->
-                        <div class="dropdown">
-
-                        </div>
                         <!-- Avatar -->
                         <div class="dropdown">
                             <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#"
