--- a/Furnicome/public/sign_up.html
+++ b/Furnicome/public/sign_up.html
@@ -9,86 +9,87 @@
     <link rel="stylesheet" href="../css/sign-up.css">
 </head>
 <main>
-<body id="body-register">
-    <div class="container">
-        <form action="">
-            <div>
-                <h1 class="title">Registrate</h1>
-            </div>
-            <form action="#">
-                <div class="user-detail">
-                    <label for="">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/user.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Nombre" required>
-                        </div>
-                    </label>
-                    <label for="">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/id.png" alt="" width="20px" height="20px">
-                            <input type="text" placeholder="DUI" required>
-                        </div>
-                    </label>
-                    <label for="">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/lock.png" alt="" width="13px" height="16px">
-                            <input type="text" placeholder="Clave" required>
-                        </div>
-                    </label>
 
-                    </label>
-                    <label for="">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/user.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Apellido" required>
-                        </div>
-                    </label>
-                    <label for="">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/alias.png" alt="" width="20px" height="20px">
-                            <input type="text" placeholder="Alias" required>
-                        </div>
-                    </label>
-                    <label for="">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/confirmar.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Confirmar clave" required>
-                        </div>
-                    </label>
+    <body id="body-register">
+        <div class="container">
+            <form action="">
+                <div>
+                    <h1 class="title">Registrate</h1>
                 </div>
-                <div class="user-detail2">
-                    <label for="" class="label2">
-                        <div class="input-box">
-                            <span class="details"></span>
-                            <img src="../recursos/correo.png" alt="" width="16px" height="16px">
-                            <input class="largo" type="text" placeholder="Correo" required>
-                        </div>
-                    </label>
-                    <label for="" class="label2">
-                        <div class="input-box">
+                <form action="#">
+                    <div class="user-detail">
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/user.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="Nombre" required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/id.png" alt="" width="20px" height="20px">
+                                <input type="text" placeholder="DUI" required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/lock.png" alt="" width="13px" height="16px">
+                                <input type="text" placeholder="Clave" required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/user.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="Apellido" required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/alias.png" alt="" width="20px" height="20px">
+                                <input type="text" placeholder="Alias" required>
+                            </div>
+                        </label>
+                        <label for="">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/confirmar.png" alt="" width="16px" height="16px">
+                                <input type="text" placeholder="Confirmar clave" required>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="user-detail2">
+                        <label for="" class="label2">
+                            <div class="input-box">
+                                <span class="details"></span>
+                                <img src="../recursos/correo.png" alt="" width="16px" height="16px">
+                                <input class="largo" type="text" placeholder="Correo" required>
+                            </div>
+                        </label>
+                        <label for="" class="label2">
+                            <div class="input-box">
 
-                            <img src="../recursos/direccion.png" alt="" width="16px" height="16px">
-                            <input class="largo" type="text" placeholder="Dirección" required>
+                                <img src="../recursos/direccion.png" alt="" width="16px" height="16px">
+                                <input class="largo" type="text" placeholder="Dirección" required>
+                            </div>
+                        </label>
+                        <div class="form-check">
+                            <label class="form-check-label" for="flexCheckDefault">Acepto terminos y condiciones</label>
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
-                    </label>
-                    <div class="form-check">
-                        <label class="form-check-label" for="flexCheckDefault">Acepto terminos y condiciones</label>
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <div class="button" id="button">
+                            <a href="../public/login.html">
+                                <button class="button" input type="submit" value="Registrar">Registrar</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="button" id="button">
-                        <a href="../public/login.html">
-                            <button class="button" input type="submit" value="Registrar">Registrar</button>
-                        </a>
-                    </div>
-                </div>
+                </form>
             </form>
-    </div>
-</body>
+        </div>
+    </body>
 </main>
+
 </html>
